--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .cache
 vgcore.*
+.envrc
+.clangd
+.direnv
+build
 
 # Created by https://www.toptal.com/developers/gitignore/api/c
 # Edit at https://www.toptal.com/developers/gitignore?templates=c
